// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> snapshot should match snapshot 1`] = `
<Popover
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <ForwardRef(TippyWrapper)
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <Tippy
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <button>
        Click Me!
      </button>
      <Portal
        containerInfo={
          <div
            data-tippy-root=""
            id="tippy-1"
            style="pointer-events: none; z-index: 9999;"
          >
            <div
              class="md-popover-wrapper"
              data-color="primary"
              data-padded="true"
              data-round="0"
            >
              <p>
                Content
              </p>
              <div
                class="md-popover-arrow-wrapper"
                id="arrow"
              >
                <svg
                  class="md-popover-arrow-svg"
                  data-side="bottom"
                  height="12"
                  viewBox="0 0 24 12"
                  width="24"
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clippath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clippath>
                  </defs>
                  <path
                    clip-path="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </div>
            </div>
          </div>
        }
      >
        <ContentContainer
          attrs={
            Object {
              "data-placement": undefined,
            }
          }
        >
          <div
            className="md-popover-wrapper"
            data-color="primary"
            data-padded={true}
            data-round={0}
          >
            <p>
              Content
            </p>
            <div
              className="md-popover-arrow-wrapper"
              id="arrow"
            >
              <Arrow>
                <svg
                  className="md-popover-arrow-svg"
                  data-side="bottom"
                  height={12}
                  viewBox="0 0 24 12"
                  width={24}
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clipPath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clipPath>
                  </defs>
                  <path
                    clipPath="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </Arrow>
            </div>
          </div>
        </ContentContainer>
      </Portal>
    </Tippy>
  </ForwardRef(TippyWrapper)>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with className 1`] = `
<Popover
  className="example-class"
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <ForwardRef(TippyWrapper)
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <Tippy
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <button>
        Click Me!
      </button>
      <Portal
        containerInfo={
          <div
            data-tippy-root=""
            id="tippy-2"
            style="pointer-events: none; z-index: 9999;"
          >
            <div
              class="md-popover-wrapper example-class"
              data-color="primary"
              data-padded="true"
              data-round="0"
            >
              <p>
                Content
              </p>
              <div
                class="md-popover-arrow-wrapper"
                id="arrow"
              >
                <svg
                  class="md-popover-arrow-svg"
                  data-side="bottom"
                  height="12"
                  viewBox="0 0 24 12"
                  width="24"
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clippath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clippath>
                  </defs>
                  <path
                    clip-path="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </div>
            </div>
          </div>
        }
      >
        <ContentContainer
          attrs={
            Object {
              "data-placement": undefined,
            }
          }
          className="example-class"
        >
          <div
            className="md-popover-wrapper example-class"
            data-color="primary"
            data-padded={true}
            data-round={0}
          >
            <p>
              Content
            </p>
            <div
              className="md-popover-arrow-wrapper"
              id="arrow"
            >
              <Arrow>
                <svg
                  className="md-popover-arrow-svg"
                  data-side="bottom"
                  height={12}
                  viewBox="0 0 24 12"
                  width={24}
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clipPath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clipPath>
                  </defs>
                  <path
                    clipPath="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </Arrow>
            </div>
          </div>
        </ContentContainer>
      </Portal>
    </Tippy>
  </ForwardRef(TippyWrapper)>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with color 1`] = `
<Popover
  color="tertiary"
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <ForwardRef(TippyWrapper)
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <Tippy
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <button>
        Click Me!
      </button>
      <Portal
        containerInfo={
          <div
            data-tippy-root=""
            id="tippy-5"
            style="pointer-events: none; z-index: 9999;"
          >
            <div
              class="md-popover-wrapper"
              data-color="tertiary"
              data-padded="true"
              data-round="0"
            >
              <p>
                Content
              </p>
              <div
                class="md-popover-arrow-wrapper"
                id="arrow"
              >
                <svg
                  class="md-popover-arrow-svg"
                  data-side="bottom"
                  height="12"
                  viewBox="0 0 24 12"
                  width="24"
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clippath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clippath>
                  </defs>
                  <path
                    clip-path="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="tertiary"
                  />
                </svg>
              </div>
            </div>
          </div>
        }
      >
        <ContentContainer
          attrs={
            Object {
              "data-placement": undefined,
            }
          }
          color="tertiary"
        >
          <div
            className="md-popover-wrapper"
            data-color="tertiary"
            data-padded={true}
            data-round={0}
          >
            <p>
              Content
            </p>
            <div
              className="md-popover-arrow-wrapper"
              id="arrow"
            >
              <Arrow
                color="tertiary"
              >
                <svg
                  className="md-popover-arrow-svg"
                  data-side="bottom"
                  height={12}
                  viewBox="0 0 24 12"
                  width={24}
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clipPath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clipPath>
                  </defs>
                  <path
                    clipPath="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="tertiary"
                  />
                </svg>
              </Arrow>
            </div>
          </div>
        </ContentContainer>
      </Portal>
    </Tippy>
  </ForwardRef(TippyWrapper)>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with id 1`] = `
<Popover
  id="example-id"
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <ForwardRef(TippyWrapper)
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <Tippy
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <button>
        Click Me!
      </button>
      <Portal
        containerInfo={
          <div
            data-tippy-root=""
            id="tippy-3"
            style="pointer-events: none; z-index: 9999;"
          >
            <div
              class="md-popover-wrapper"
              data-color="primary"
              data-padded="true"
              data-round="0"
              id="example-id"
            >
              <p>
                Content
              </p>
              <div
                class="md-popover-arrow-wrapper"
                id="arrow"
              >
                <svg
                  class="md-popover-arrow-svg"
                  data-side="bottom"
                  height="12"
                  viewBox="0 0 24 12"
                  width="24"
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clippath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clippath>
                  </defs>
                  <path
                    clip-path="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </div>
            </div>
          </div>
        }
      >
        <ContentContainer
          attrs={
            Object {
              "data-placement": undefined,
            }
          }
          id="example-id"
        >
          <div
            className="md-popover-wrapper"
            data-color="primary"
            data-padded={true}
            data-round={0}
            id="example-id"
          >
            <p>
              Content
            </p>
            <div
              className="md-popover-arrow-wrapper"
              id="arrow"
            >
              <Arrow>
                <svg
                  className="md-popover-arrow-svg"
                  data-side="bottom"
                  height={12}
                  viewBox="0 0 24 12"
                  width={24}
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clipPath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clipPath>
                  </defs>
                  <path
                    clipPath="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </Arrow>
            </div>
          </div>
        </ContentContainer>
      </Portal>
    </Tippy>
  </ForwardRef(TippyWrapper)>
</Popover>
`;

exports[`<Popover /> snapshot should match snapshot with style 1`] = `
<Popover
  style={
    Object {
      "color": "pink",
    }
  }
  triggerComponent={
    <button>
      Click Me!
    </button>
  }
>
  <ForwardRef(TippyWrapper)
    animation={false}
    appendTo="parent"
    offset={
      Array [
        0,
        16,
      ]
    }
    placement="bottom"
    popperOptions={
      Object {
        "modifiers": Array [
          Object {
            "name": "arrow",
            "options": Object {
              "element": "#arrow",
              "padding": 5,
            },
          },
        ],
      }
    }
    render={[Function]}
    trigger="click"
  >
    <Tippy
      animation={false}
      appendTo="parent"
      offset={
        Array [
          0,
          16,
        ]
      }
      placement="bottom"
      popperOptions={
        Object {
          "modifiers": Array [
            Object {
              "name": "arrow",
              "options": Object {
                "element": "#arrow",
                "padding": 5,
              },
            },
          ],
        }
      }
      render={[Function]}
      trigger="click"
    >
      <button>
        Click Me!
      </button>
      <Portal
        containerInfo={
          <div
            data-tippy-root=""
            id="tippy-4"
            style="pointer-events: none; z-index: 9999;"
          >
            <div
              class="md-popover-wrapper"
              data-color="primary"
              data-padded="true"
              data-round="0"
              style="color: pink;"
            >
              <p>
                Content
              </p>
              <div
                class="md-popover-arrow-wrapper"
                id="arrow"
              >
                <svg
                  class="md-popover-arrow-svg"
                  data-side="bottom"
                  height="12"
                  viewBox="0 0 24 12"
                  width="24"
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clippath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clippath>
                  </defs>
                  <path
                    clip-path="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </div>
            </div>
          </div>
        }
      >
        <ContentContainer
          attrs={
            Object {
              "data-placement": undefined,
            }
          }
          style={
            Object {
              "color": "pink",
            }
          }
        >
          <div
            className="md-popover-wrapper"
            data-color="primary"
            data-padded={true}
            data-round={0}
            style={
              Object {
                "color": "pink",
              }
            }
          >
            <p>
              Content
            </p>
            <div
              className="md-popover-arrow-wrapper"
              id="arrow"
            >
              <Arrow>
                <svg
                  className="md-popover-arrow-svg"
                  data-side="bottom"
                  height={12}
                  viewBox="0 0 24 12"
                  width={24}
                  xmlns="http://www.w3.org/svg/2000"
                >
                  <defs>
                    <clipPath
                      id="popover-arrow-cut-stroke-bottom"
                    >
                      <path
                        d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                      />
                    </clipPath>
                  </defs>
                  <path
                    clipPath="url(#popover-arrow-cut-stroke-bottom)"
                    d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
                    data-color="primary"
                  />
                </svg>
              </Arrow>
            </div>
          </div>
        </ContentContainer>
      </Portal>
    </Tippy>
  </ForwardRef(TippyWrapper)>
</Popover>
`;
